Name:                Visi
Version:             0.1
Description:         Visi language and testbed
License:             OtherLicense
License-file:        LICENSE
Author:              David Pollak
Maintainer:          dpp@visi.pro
Build-Type:          Simple
Cabal-Version:       >=1.2

-- -no-hs-main

Executable visi
  Main-is:           Foo.hs
  GHC-Options: -threaded
  extensions: ExistentialQuantification,  FlexibleInstances, TypeSynonymInstances, FlexibleContexts, CPP, ForeignFunctionInterface, ScopedTypeVariables
  Build-Depends:     base,
                     containers,
                     pretty,
                     parsec,
                     mtl,
                     HUnit,
                     text,
                     utf8-string,
                     uuid,
                     bytestring,
                     random,
                     array,
                     regex-pcre-builtin,
                     aeson,
                     SHA
